' Copyright (c) 2023 - present Florian Sauer
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' https://c4model.com
' https://www.infoq.com/articles/C4-architecture-model
' https://github.com/plantuml-stdlib/C4-PlantUML
@startuml VerlagHandler

skinparam classAttributeIconSize 0

package jakarta.servlet.http {
    class HttpServletRequest
}

package org.springframework {
    package web.bind.annotation {
        interface "@RestController" as RestController
        interface "@RequestMapping" as RequestMapping
        interface "@PathVariable" as PathVariable
        interface "@RequestParam" as RequestParam
        interface "@ExceptionHandler" as ExceptionHandler
        interface "@ResponseStatus" as ResponseStatus

        RequestMapping .left[hidden].> RestController
    }

    package http {
        class ResponseEntity<T>
    }
    package hateoas {
        class CollectionModel<E>
    }
    package util {
        class MultiValueMap<K,V>
    }

    ResponseEntity .up[hidden].> CollectionModel
}

package java.util {
    class UUID

    UUID .up[hidden].> HttpServletRequest
}

package com.acme.verlag {
    package entity {
        class Verlag << entity >>
    }

    package service {
        class VerlagReadService << control >> << @Service >>
        class NotFoundException

        VerlagReadService .right[hidden].> NotFoundException
    }

    package rest #DDDDDD {
        class VerlagModel <<entity>>

        class VerlagGetController << boundary >> << @RestController >> << @RequestMapping >> {
            + @GetMapping getById(@PathVariable id: UUID, request: HttpServletRequest, @RequestHeader("If-None-Match") version: String): ResponseEntity<VerlagModel>
            + @GetMapping get(@RequestParam suchkriterien: MultiValueMap<String, String>, request: HttpServletRequest)
        }

        class CommonExceptionHandler << @ControllerAdvice >> {
            + @ExceptionHandler @ResponseStatus onNotFound(ex: NotFoundException)
        }

        VerlagGetController o-right-> "1" VerlagReadService : service
        VerlagGetController ..> VerlagModel
        VerlagGetController ..> Verlag

        VerlagGetController .up.> CollectionModel
        VerlagGetController .right.> HttpServletRequest
        VerlagGetController .up.> MultiValueMap
        VerlagGetController .up.> ResponseEntity

        VerlagGetController .up.> RestController
        VerlagGetController .up.> RequestMapping
        VerlagGetController .up.> PathVariable
        VerlagGetController .up.> RequestParam

        CommonExceptionHandler .up.> ExceptionHandler
        CommonExceptionHandler .up.> ResponseStatus
        CommonExceptionHandler ..> NotFoundException
        CommonExceptionHandler .up[hidden].> VerlagModel
        CommonExceptionHandler .[hidden].> Verlag

        VerlagGetController .right.> UUID

        VerlagModel ..> Verlag
        VerlagModel .[hidden].> VerlagReadService
    }
}

hide empty members

footer (c) Florian Sauer

@enduml
